[gd_scene load_steps=10 format=3 uid="uid://cd2as5ogj6hch"]

[ext_resource type="Script" uid="uid://g8l1is0q14ca" path="res://scripts/button.gd" id="1_rhj8v"]
[ext_resource type="Texture2D" uid="uid://cb6i08eg0h1fh" path="res://assets/images/button1_on.png" id="2_i7y4x"]
[ext_resource type="Texture2D" uid="uid://blmmkyvqw7xta" path="res://assets/images/button1_off.png" id="3_1bdt2"]
[ext_resource type="FontFile" uid="uid://bp83qou1fslbk" path="res://assets/fonts/PixelOperator8.ttf" id="3_3q610"]
[ext_resource type="Texture2D" uid="uid://c8ukena52osw8" path="res://assets/images/button1_on_near.png" id="3_8828i"]
[ext_resource type="Texture2D" uid="uid://ckjx2hmm7ofnt" path="res://assets/images/button1_off_near.png" id="5_bx0y0"]
[ext_resource type="Texture2D" uid="uid://b5ijeems3ly6j" path="res://assets/images/button1_disabled.png" id="6_bx0y0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7y4x"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bx0y0"]
size = Vector2(32, 32)

[node name="Button" type="Area2D"]
collision_layer = 16
script = ExtResource("1_rhj8v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i7y4x")

[node name="FloatPress" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloatPress"]
shape = SubResource("RectangleShape2D_bx0y0")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="TurnOn" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 2.38419e-07)
texture = ExtResource("2_i7y4x")

[node name="TurnOnNear" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 2.38419e-07)
texture = ExtResource("3_8828i")

[node name="TurnOff" type="Sprite2D" parent="."]
texture = ExtResource("3_1bdt2")

[node name="TurnOffNear" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_bx0y0")

[node name="Disabled" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_bx0y0")

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 12)
theme_override_fonts/font = ExtResource("3_3q610")
text = "E"
horizontal_alignment = 1

[node name="ActivationCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="FloatPress" to="." method="_on_float_press_body_entered"]
[connection signal="timeout" from="ActivationCooldown" to="." method="_on_activation_cooldown_timeout"]
